<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RapPlaylist"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/rap"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/main_big_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50_tracks"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2h_55m_21s"
            android:layout_marginStart="50dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_shuffle_black_18dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/shuffle_button" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/popular"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/rap_playlist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true"
        android:orientation="vertical" />

</LinearLayout>